<resources>
    <string name="app_name">SriAstrology</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Daily Workout</string>
    <string name="slide_1_desc">Set your daily workout routine by the help of trainer</string>
    <string name="slide_2_title">Meditation Techniques </string>
    <string name="slide_2_desc">Learn about the different meditation techniques and practice them</string>
    <string name="slide_3_title">Diet Chart</string>
    <string name="slide_3_desc">Make your diet chart by the help of health experts</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="internet_enable">No InternetConnection</string>
    <string name="internet_enable_message">Please check your mobile data or wifi connection.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>


    <string name="app_demo_screens_visibility_boolean_status_key">demoScreenVisibleStatus</string>
    <string name="app_login_status_key">loginStatus</string>
    <string name="app_loggedinAs">loggedin_as</string>
    <string name="poweredby">Powered by Anaghasoftech.com</string>

    <string name="know_your_sign_status_key">knowSignStatus</string>
    <string name="selected_sign_value">selectedSign</string>
    <string name="signin_status_key">signinStatus</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_drawer_labels">
        <!--     <item>@string/nav_item_home</item>
             <item>@string/action_about_app</item>
             <item>@string/action_contact_us</item>
             <item>@string/action_about_us</item>
             <item>@string/nav_item_app_reviews</item>
             <item>@string/action_media_and_share</item>-->
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_dailyhoroscope</item>
        <item>@string/nav_item_yourchartdetails</item>
        <!-- <item>@string/nav_item_personalizedhoroscope</item>-->
        <item>@string/nav_item_personality</item>
        <item>@string/nav_item_career</item>
        <item>@string/nav_item_moneymatters</item>
        <item>@string/nav_item_health</item>
        <item>@string/nav_item_marriage</item>
        <item>@string/nav_item_children</item>
        <item>@string/nav_item_remidies</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_notifications</item>
        <!-- <item>@string/nav_item_logout</item>-->
    </string-array>


    <string name="nav_item_dailyhoroscope">Daily Predictions</string>
    <string name="nav_item_yourchartdetails">MyChart Details</string>
    <string name="nav_item_personalizedhoroscope">Personalized Horoscope</string>
    <string name="nav_item_logout">Logout</string>


    <string name="nav_item_home">Home</string>
    <string name="action_about_app">About App</string>
    <string name="action_about_us">About Us</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="nav_item_app_reviews">Reviews</string>
    <string name="action_media_and_share">Media and share</string>
    <string name="action_quick_demo">Quick Demo</string>
    <string name="action_list">List</string>
    <string name="nav_item_feedback">Feedback</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_user_images_white">
        <item>@drawable/nav_home_white</item>
        <item>@drawable/dailyhoroscope</item>
        <item>@drawable/yourchartdetails</item>
        <!--<item>@drawable/personalizedhoroscope</item>-->
        <item>@drawable/person</item>
        <item>@drawable/career</item>
        <item>@drawable/money</item>
        <item>@drawable/health</item>
        <item>@drawable/ring</item>
        <item>@drawable/children</item>
        <item>@drawable/personalizedhoroscope</item>
        <item>@drawable/settings</item>
        <item>@drawable/settings</item>
        <!-- <item>@drawable/logout</item>-->
        <!-- <item>@drawable/nav_home_white</item>
         <item>@drawable/info_android</item>
         <item>@drawable/contact_us_updated</item>
         <item>@drawable/nav_rewards_white</item>
         <item>@drawable/nav_support_help_white</item>
         <item>@drawable/ic_share</item>-->
    </string-array>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="submit">submit</string>
    <string name="info_about">About Author</string>


    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="profileupdate">ProfileUpdate</string>


    <string name="generatehoroscope">Horoscope</string>
    <string name="personaldetails">Details</string>
    <string name="thankyou">Thankyou</string>


    <string name="know_your_sign">KnowYourSign</string>
    <string name="address_one">Address One</string>
    <string name="address_two">Address Two</string>
    <string name="address_l_one">Address Line1</string>
    <string name="address_l_two">Address Line2</string>
    <string name="address_one_country">Country</string>
    <string name="address_one_state">State</string>
    <string name="address_one_city">City</string>
    <string name="address_mobile">Mobile</string>
    <!--
        <string name="address_one_contactphone_one">Contact Phone</string>
    -->
    <!-- <string name="address_one_mobile_two">Mobile Two</string>-->
    <string name="middle_name">MiddleName</string>
    <string name="last_name">LastName</string>
    <string name="first_name">FirstName</string>
    <!--
        <string name="prompt_register_email">Email</string>
    -->
    <string name="action_update_profile_edit">profile_update</string>
    <string name="nav_item_personality">Self</string>
    <string name="nav_item_career">Career</string>
    <string name="nav_item_moneymatters">MoneyMatters</string>
    <string name="nav_item_health">Health</string>
    <string name="nav_item_marriage">Marriage</string>
    <string name="nav_item_children">Children</string>
    <string name="nav_item_remidies">Remedies</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_notifications">Notifications</string>
    <string name="app_signout">SignOut</string>
    <string name="forgot">Forgot</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="about_author"><![CDATA[Let me start paying my respect to my parents Smt & Sri B.L. Narasimhan, my family diety Sri Veerabhadra and my upaasana diety Sri Laithamba. Born in family of astrologers, I am fortunate to have started my study in Astrology and Palmistry 25 years back and have been practicing since then.<br><p>Every family used to have family astrologers earlier who used to come and tell us about changes in planetary positions, how they are effecting us and the remedial measures to be taken care. This is our humble attempt to bring fruits of vedic astrology to you through a mobile application.]]></string>
    <string name="about_author_title">About Author</string>
    <string name="take_order">paypal</string>
    <string name="notifications">Notifications</string>

    <!--generated from server-->

    <string name="paypal_mClientToken">eyJ2ZXJzaW9uIjoyLCJhdXRob3JpemF0aW9uRmluZ2VycHJpbnQiOiI1MjM3YjU3YzQzMmMxMDY4Zjc5MTkwZGM4NWVjM2EwYzlmN2EyZTkzNGE5M2NhZTFjYzhhZWE3NWU3YzIzN2Y2fGNyZWF0ZWRfYXQ9MjAxOC0wOC0wNlQxMDo1OTo0MC43NTU0MzczNzArMDAwMFx1MDAyNm1lcmNoYW50X2lkPXA3azNmd3BtcDlzaDM4azVcdTAwMjZwdWJsaWNfa2V5PXdxNm1ybXJ3OTQ5OGtjYngiLCJjb25maWdVcmwiOiJodHRwczovL2FwaS5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tOjQ0My9tZXJjaGFudHMvcDdrM2Z3cG1wOXNoMzhrNS9jbGllbnRfYXBpL3YxL2NvbmZpZ3VyYXRpb24iLCJjaGFsbGVuZ2VzIjpbXSwiZW52aXJvbm1lbnQiOiJzYW5kYm94IiwiY2xpZW50QXBpVXJsIjoiaHR0cHM6Ly9hcGkuc2FuZGJveC5icmFpbnRyZWVnYXRld2F5LmNvbTo0NDMvbWVyY2hhbnRzL3A3azNmd3BtcDlzaDM4azUvY2xpZW50X2FwaSIsImFzc2V0c1VybCI6Imh0dHBzOi8vYXNzZXRzLmJyYWludHJlZWdhdGV3YXkuY29tIiwiYXV0aFVybCI6Imh0dHBzOi8vYXV0aC52ZW5tby5zYW5kYm94LmJyYWludHJlZWdhdGV3YXkuY29tIiwiYW5hbHl0aWNzIjp7InVybCI6Imh0dHBzOi8vb3JpZ2luLWFuYWx5dGljcy1zYW5kLnNhbmRib3guYnJhaW50cmVlLWFwaS5jb20vcDdrM2Z3cG1wOXNoMzhrNSJ9LCJ0aHJlZURTZWN1cmVFbmFibGVkIjp0cnVlLCJwYXlwYWxFbmFibGVkIjp0cnVlLCJwYXlwYWwiOnsiZGlzcGxheU5hbWUiOiJhbmFnaGEiLCJjbGllbnRJZCI6IkFlbExKWVZnX3EyQW1aQVllS1dDZTU0eWs4dGM0ZW5VRnlEMElIZEQ4ei1Ed0tmb2MzczR1M0FXYmdJN013anNlR1lXZGZVQjJkS2JLcHZ2IiwicHJpdmFjeVVybCI6Imh0dHA6Ly9leGFtcGxlLmNvbS9wcCIsInVzZXJBZ3JlZW1lbnRVcmwiOiJodHRwOi8vZXhhbXBsZS5jb20vdG9zIiwiYmFzZVVybCI6Imh0dHBzOi8vYXNzZXRzLmJyYWludHJlZWdhdGV3YXkuY29tIiwiYXNzZXRzVXJsIjoiaHR0cHM6Ly9jaGVja291dC5wYXlwYWwuY29tIiwiZGlyZWN0QmFzZVVybCI6bnVsbCwiYWxsb3dIdHRwIjp0cnVlLCJlbnZpcm9ubWVudE5vTmV0d29yayI6ZmFsc2UsImVudmlyb25tZW50Ijoib2ZmbGluZSIsInVudmV0dGVkTWVyY2hhbnQiOmZhbHNlLCJicmFpbnRyZWVDbGllbnRJZCI6Im1hc3RlcmNsaWVudDMiLCJiaWxsaW5nQWdyZWVtZW50c0VuYWJsZWQiOnRydWUsIm1lcmNoYW50QWNjb3VudElkIjoiYW5hZ2hhIiwiY3VycmVuY3lJc29Db2RlIjoiVVNEIn0sIm1lcmNoYW50SWQiOiJwN2szZndwbXA5c2gzOGs1IiwidmVubW8iOiJvZmYifQ==</string>

    <string name="note">Please be advised that horoscope analysis  and recommended remedies in this
app are to be taken at your own will and we take no responsibility on the
results.</string>
    <string name="thankyoureg"><![CDATA[Thank you for your belief in Astrology and registering with us. We are working on your horoscope and will notify you as soon as your profile is active and your horoscope analysis is ready.<p>This mobile application is built based on Vedic Astrology principles. Based on your birth details horoscope is drawn with positions of 9 planets in 12 houses at the time of your birth. 12 houses of horoscope signifies different aspects of our life like self, wealth, family, mother, assets vehicles, children, debts and injuries, spouse, health, luck and father, career, savings and expenses.<p> A trained and experienced astrologer analyses the horoscope with combinations of planetary positions with different houses, their aspects on other houses along with current planetary period. Its just not only static snapshot of planetary positions at time of birth but transition planetary position also brings up lot of changes on one\'s horoscope and thus lot of importance is given to asses the affects of current planetary position with respect to planetary positions at birth to come up with final analysis of horoscope. You will be constantly updated with notifications about transit planetary positions and its effects on you as well other important updates that matters to you.<p> This is a great science given to mankind by Vedas. This should be taken as guide line to lead a fulfilled life in righteous (Dharmic) way to ultimate goal of Moksha while taking care of 4 aspects of life namely Dharma, Arch , Kama Moksha.<p> My humble request to you is, to look at this science as a guide to lead life by utilizing the favorable period more efficiently and living through the tough times with caution and hope and cruising the life with compassion towards others and gratitude for being born as human.<p> Once again thank you for registering with us we take every precaution to best of our knowledge to bring you the right analysis and remedial measures as per Vedic Astrology principles. On a cautionary note, please be advised that all analysis, remedies provided in this application are for information only.]]></string>


</resources>
