<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- Header aligned to top -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userprofile_update_userNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:maxLines="2"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="Email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/userprofile_update_userEmailET"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/prompt_register_email"
                android:textColor="@color/greyhint"
                android:textSize="16sp"

                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userprofile_update_userFNET_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userprofile_update_userFNET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/first_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userprofile_update_userLET_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userprofile_update_userLET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/last_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userprofile_update_userMET_InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userprofile_update_userMET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/middle_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userprofile_update_mobile_no_one__InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userprofile_update_mobile_no_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/address_one_contactphone_one"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGenderGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:fontFamily="sans-serif-light"
                        android:padding="5dp"
                        android:text="M"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:fontFamily="sans-serif-light"
                        android:text="F"
                        android:textColor="@color/greyhint"
                        android:textSize="16sp" />
                </RadioGroup>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userprofile_update_dateofbirthTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/time_of_birth"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center|left"
                    android:text="*DoB"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/greyhint" />


                <TextView
                    android:id="@+id/userprofile_update_timeofbirthTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/time_of_birth"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center|left"
                    android:text="*ToB"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/greyhint" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addressOneTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/address_one"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/separatorView"
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userprofile_update_address_line_one_description_InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userprofile_update_address_line_one_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/address_l_one"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:singleLine="true"
                        android:textColor="#666666" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userprofile_update_address_line_two_description_InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/userprofile_update_address_line_two_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/address_l_two"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:singleLine="true"
                        android:textColor="#666666" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userprofile_update_city_InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userprofile_update_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/address_one_city"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textMultiLine"
                        android:singleLine="true"
                        android:textColor="#666666" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="visible">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userprofile_update_state_InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userprofile_update_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="State"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#666666" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userprofile_update_country_InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userprofile_update_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="Country"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#666666" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/userprofile_update_zip_InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/userprofile_update_zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:hint="Zip/Postal Code"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#666666" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>