<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f75820"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/sriastrologo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/image"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/oldPasswordET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/password_small"
                android:drawablePadding="10dp"
                android:drawableTint="#6e6e6e"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textColorHint="#d4d4d4"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/newpasswordET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/password_small"
                android:drawablePadding="10dp"
                android:drawableTint="#6e6e6e"
                android:ems="10"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textColorHint="#d4d4d4"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/confirm_passwordET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/password_small"
                android:drawablePadding="10dp"
                android:drawableTint="#6e6e6e"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/black"
                android:textColorHint="#d4d4d4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/resetBT"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_button"
                android:text="Reset"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:id="@+id/signuptv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|start"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="Signup?" />

                <TextView
                    android:id="@+id/forgotpasswordtv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:text="Forgot Password?" />

            </LinearLayout>-->

            <!-- <TextView
                 android:id="@+id/signuptv"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_margin="25dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|start"
                 android:textColor="@color/white"
                 android:text="Signup?" />

             <TextView
                 android:id="@+id/forgotpasswordtv"
                 android:layout_width="match_parent"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|start"
                 android:textColor="@color/white"
                 android:text="Forgot Password?"  />-->
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>